correction contraste h2 page accueil

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
 }
 
 .color-text{
-   color:#FCCF69!important;
+   color:#fad98b!important;
 }
 a,
 button {
